--- a/views/about/index.html
+++ b/views/about/index.html
@@ -17,16 +17,16 @@
 	<!--css-->
 <!--
 	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/common.css">
-	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/tourist/init.css">
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/about/init.css">
 -->
 	<link rel="stylesheet" href="../../static/css/common.css">
-	<link rel="stylesheet" href="../../static/css/tourist/init.css">
+	<link rel="stylesheet" href="../../static/css/about/init.css">
 	
 	<!--js-->
 	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 <!--	<script src="http://static.sokchobeach.co.kr/js/tourist/init.js"></script>-->
-	<script src="../../static/js/tourist/init.js"></script>
+	<script src="../../static/js/about/init.js"></script>
 	
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
