--- a/static/css/board/init.css
+++ b/static/css/board/init.css
@@ -36,8 +36,31 @@
 .contents .board .tb-read thead tr {background: #f2f2f2; border-top: 1px solid #3c3b3b; border-bottom: 1px solid #d9d9d9;}
 .contents .board .tb-read tbody tr {border-bottom: 1px solid #d9d9d9;}
 .contents .board .tb-read thead tr th .flt-r {float: right;}
+
+
 .contents .board .row-btn {margin-top: 30px; text-align: center;}
+.contents .board  .pagenation + .row-btn {margin-top: 0;}
 .contents .board .row-btn .btn-list {display: inline-block; font-size: 20px; border: 1px solid #b7b7b7; border-radius: 25px; padding: 8px 62px;}
+.contents .board .row-btn .left {float: left;}
+.contents .board .row-btn .right {float: right;}
+.contents .board .row-btn [class*=btn-] {background: #fff; border: 1px solid #b0b0b0; line-height: 1; padding: 11px 35px; border-radius: 30px; font-size: 20px; color: #676767; letter-spacing: -1px; min-width: 124px;}
+.contents .board .row-btn [class*=btn-]:first-child + button {margin-left: 10px;}
+.contents .board .pagenation + .row-btn .btn-write {position: absolute; right: 0; bottom: 0;}
+.contents .board .row-search {text-align: center;}
+.contents .board .row-search {margin-top: 20px;}
+.contents .board .row-search > * {position: relative; display: inline-block; height: 37px; border: 1px solid #c8c8c8; background: #fff; box-sizing: border-box; vertical-align: middle; padding: 0 5px; font-size: 16px; line-height: 1; font-family: "Nanum Square", sans-serif; vertical-align: top; border-radius: 2px;}
+.contents .board .row-search .sltDiv {padding: 0; width: 120px; overflow: hidden;}
+.contents .board .row-search .sltDiv:after {content: "▼"; position: absolute; right: 10px; top: 9px; color: #acacac; pointer-events: none;}
+.contents .board .row-search .sltDiv .sltArr {}
+.contents .board .row-search .category {position: absolute; left: 0; top: 0; padding-left: 10px; width: 100%; border: 0; font-size: 16px; height: 100%; width: 150px;}
+.contents .board .row-search .category:focus {width: 100%;}
+.contents .board .row-search .category::-ms-expand{display:none;}
+.ie8 .contents .board .row-search .category,
+.ie9 .contents .board .row-search .category {width: 100%;}
+.ie8 .contents .board .row-search .sltDiv:after,
+.ie9 .contents .board .row-search .sltDiv:after {display: none;}
+.contents .board .row-search .keword {text-align: left; margin: 0 8px; padding-left: 10px; width: 200px;}
+.contents .board .row-search .btn-search {padding: 0 30px; border-radius: 5px; background: #efefef;}
 
 /*추억 게시판*/
 .contents .subVisual.board-memory {background: #eee url(../../../img/board/subVisual_bm.jpg) no-repeat center / cover;}
@@ -51,27 +74,7 @@
 .contents .board-memory .tb-list tr.reply td a {text-indent: 15px;}
 .contents .board-memory .tb-list tr.reply td a .re {position: relative; top: -1px; display: inline-block; font-size: 15px; text-indent: 0; background: #898989; color: #fff; padding: 0 5px;}
 .contents .board-memory .area-1 {}
-.contents .board-memory .area-1 .row-btn {}
-.contents .board-memory .area-1 .row-btn .left {float: left;}
-.contents .board-memory .area-1 .row-btn .right {float: right;}
-.contents .board-memory .area-1 .row-btn [class*=btn-] {background: #fff; border: 1px solid #b0b0b0; line-height: 1; padding: 11px 35px; border-radius: 30px; font-size: 20px; color: #676767; letter-spacing: -1px; min-width: 124px;}
-.contents .board-memory .area-1 .row-btn [class*=btn-]:first-child + button {margin-left: 10px;}
-.contents .board-memory .area-1 .pagenation + .row-btn .btn-write {position: absolute; right: 0; bottom: 0;}
-.contents .board-memory .row-search {text-align: center;}
-.contents .board-memory .row-search {margin-top: 20px;}
-.contents .board-memory .row-search > * {position: relative; display: inline-block; height: 37px; border: 1px solid #c8c8c8; background: #fff; box-sizing: border-box; vertical-align: middle; padding: 0 5px; font-size: 16px; line-height: 1; font-family: "Nanum Square", sans-serif; vertical-align: top; border-radius: 2px;}
-.contents .board-memory .row-search .sltDiv {padding: 0; width: 120px; overflow: hidden;}
-.contents .board-memory .row-search .sltDiv:after {content: "▼"; position: absolute; right: 10px; top: 9px; color: #acacac; pointer-events: none;}
-.contents .board-memory .row-search .sltDiv .sltArr {}
-.contents .board-memory .row-search .category {position: absolute; left: 0; top: 0; padding-left: 10px; width: 100%; border: 0; font-size: 16px; height: 100%; width: 150px;}
-.contents .board-memory .row-search .category:focus {width: 100%;}
-.contents .board-memory .row-search .category::-ms-expand{display:none;}
-.ie8 .contents .board-memory .row-search .category,
-.ie9 .contents .board-memory .row-search .category {width: 100%;}
-.ie8 .contents .board-memory .row-search .sltDiv:after,
-.ie9 .contents .board-memory .row-search .sltDiv:after {display: none;}
-.contents .board-memory .row-search .keword {text-align: left; margin: 0 8px; padding-left: 10px; width: 200px;}
-.contents .board-memory .row-search .btn-search {padding: 0 30px; border-radius: 5px; background: #efefef;}
+
 
 /*추억 게시판 read*/
 .contents .board-memory .tb-list tr.post td {text-align: left; padding: 40px 60px 50px; font-size: 16px; line-height: 1.8;}
