--- a/static/css/common_m-.css
+++ b/static/css/common_m-.css
@@ -28,65 +28,51 @@ label {cursor: pointer;}
 .contents {position: relative;}
 .container:before, .container:after {content: ""; display: table;}
 .container:after {clear: both;}
-.container {position: relative; width: 94%; margin: 0 auto;}
+.container {position: relative; width: 96%; margin: 0 auto;}
 .f-bd {font-weight: 700;}
 .f-bdr {font-weight: 800;}
-.thColor {color: #1d5e87;}
-.appe-reset {font-family: "Nanum Square", sans-serif;}
 .wrap {box-sizing: border-box;}
-.area {position: relative;}
 
 /*공통 서브비쥬얼*/
-.contents .subVisual {padding-top: 50px; box-sizing: border-box; color: #fff; height: 160px; background: #eee url(../../../img/m/about/subVisual.jpg) no-repeat center bottom / cover;}
-.contents .subVisual .mainTxt {text-align: center; box-sizing: border-box;}
+.contents .subVisual {padding-top: 100px; box-sizing: border-box; color: #fff; height: 200px; background: #eee url(http://img.sampobeach.co.kr/m/event/subVisual.jpg) no-repeat center bottom / cover;}
+.contents .subVisual .mainTxt {text-align: right; padding-right: 4%; box-sizing: border-box;}
 .contents .subVisual .mainTxt > * {text-shadow: 3px 3px 2px rgba(0,0,0, .25); letter-spacing: -0.7px;}
-.contents .subVisual .mainTxt .p-1 {font-size: 13px;font-weight: 700;}
-.contents .subVisual .mainTxt h2 {font-size: 22px; margin-top: 5px; line-height: 1.1; letter-spacing: -1.2px;}
-.contents .subVisual .mainTxt .p-2 {font-size: 11.5px; margin-top: 5px; text-transform: uppercase;}
+.contents .subVisual .mainTxt .p-1 {font-size: 12px;font-weight: 700;}
+.contents .subVisual .mainTxt h2 {font-size: 25px; margin-top: 5px; line-height: 1.1; letter-spacing: -0.9px;}
+.contents .subVisual .mainTxt .p-2 {font-size: 16px; margin-top: 5px;}
 
 /*해더영역*/
-.header,
-.header .wrap {width: 100%; height: 52px;}
-.header {position: relative; background: #000;}
-.header .wrap {position: fixed; top: 0; left: 0; width: 100%; background: rgba(0,0,0,0.3); z-index: 1;}
-.header .wrap .area {height: 100%; padding-top: 10px; box-sizing: border-box;}
-
-.header .wrap .logo {position: absolute; right: 0; top: 50%; margin-top: -16px; width: 130px;}
-.header .wrap .nav-tab {position: relative; float: left; top: 0px; left: 0; width: 28px; border: 0; background: 0;}
+.header {position: absolute; top: 0; left: 0; width: 100%; z-index: 99;}
+.header .wrap {}
+.header .wrap .logo {position: relative; float: left; width: 120px; left: 10px; top: 12px;}
+.header .wrap .nav-tab {position: absolute; top: 8px; right: 8px; width: 28px; border: 0; background: 0;}
 .header .wrap .nav-tab .bar {display: block; background: #fff; height: 4px; margin: 5px auto; border-radius: 4px;}
-.wrapper .wrap .weather {float: left; color: #fff; margin-left: 12px; font-size: 15px; margin-top: 6px;}
-.wrapper .wrap .weather > * {position: relative; display: inline-block; vertical-align: bottom;}
-.wrapper .wrap .weather .s1 {top: 1px;}
-.wrapper .wrap .weather .mg {width: 1px; height: 12px; background: #fff; margin: 0 5px 0 6px; top: -2px;}
-.wrapper .wrap .weather .mg, .wrapper .wrap .weather .c {margin-top: 0;}
-.wrapper .wrap .weather .c {font-family: "Nanum gothic", sans-serif;}
+
 
 .bg-drop {position: fixed; z-index: 11; top: 0; left: 0; width: 100%; height: 100%; background: #000; opacity: 0.5;}
-.wrapper .wrap .gnb {position: fixed; left: -200px; top: 0; width: 200px; height: 100%; transition: right 0.3s; -webkit-transition: right 0.3s; -o-transition: right 0.3s;}
+.wrapper .wrap .gnb {position: fixed; right: -200px; top: 0; width: 200px; height: 100%; transition: right 0.3s; -webkit-transition: right 0.3s; -o-transition: right 0.3s;}
 .wrapper .wrap .gnb .bg-drop {opacity: 0; visibility: hidden; transition: all 0.3s; -webkit-transition: all 0.3s; -o-transition: all 0.3s;}
-.wrapper .wrap .gnb.on {left: 0;}
+.wrapper .wrap .gnb.on {right: 0;}
 .wrapper .wrap .gnb.on .bg-drop {display: block; opacity: 0.5; visibility: visible;}
-.wrapper .wrap .menu {position: absolute; right: 0; top: 0; width: 100%; height: 100%; background: #fff; z-index: 12; background: #6a739b;}
-.wrapper .wrap .menu > li {background: #fff;}
-.wrapper .wrap .menu > li.item-0 {background: #6a739b; padding: 8px 12px; text-align: right;}
-.wrapper .wrap .menu > li.item-0 .p-1 {font-size: 11px; color: #fff; text-align: left; margin-top: 3px; line-height: 1.3;}
-.wrapper .wrap .menu > li.item-0 img {position: relative; width: 104px;}
+.wrapper .wrap .menu {position: absolute; right: 0; top: 0; width: 100%; height: 100%; background: #fff; z-index: 12;}
+.wrapper .wrap .menu > li.item-0 {background: #0075b4; padding: 8px 12px;}
+.wrapper .wrap .menu > li.item-0 img {position: relative; top: 2px; width: 96px;}
 .wrapper .wrap .menu > li {position: relative;} 
 .wrapper .wrap .menu > li > a {display: block; padding: 10px 12px; font-size: 14px;}
 .wrapper .wrap .menu > li > a {border-bottom: 1px solid #d2d2d2;}
-.wrapper .wrap .menu .i-x {left: 0; top: 0; height: 42px; width: 40px;}
+.wrapper .wrap .menu .i-x {right: 0; top: 0; height: 100%; width: 40px;}
 .wrapper .wrap .menu .i-x:before, .wrapper .wrap .menu .i-x:after {background: #fff; height: 2px; left: 50%; margin-left: -10px; top: 50%; margin-top: -2px;}
 .wrapper .wrap .menu .rArrow {float: right;}
-.wrapper .wrap .menu .rArrow:after {border-color: #6a739b; border-width: 2px; top: 0px; margin-right: 2px;}
+.wrapper .wrap .menu .rArrow:after {border-color: #118bea; border-width: 2px; top: 0px; margin-right: 2px;}
+
 
 /*푸터영역*/
-.footer {position: relative; background: #575757; padding: 20px 0 35px; text-align: center;}
+.footer {position: relative; background: #576480; padding: 20px 0 35px; text-align: center;}
 /*.footer .wrap .logo, .footer .wrap address {float: left;}*/
 .footer .wrap {width: 100%;}
-.footer .wrap .logo {margin-bottom: 7px;}
-.footer .wrap .logo img {width: 115px;}
+.footer .wrap .logo {margin-bottom: 5px;}
+.footer .wrap .logo img {width: 100px;}
 .footer .wrap address {color: #fff; font-size: 11.5px; line-height: 1.6; word-break: keep-all; letter-spacing: -0.5px;}
-.footer .wrap address .p-2 {margin-top: 12px;}
 .footer .wrap address small {text-transform: uppercase; font-size: 11px;}
 
 
