--- a/static/css/init_m.css
+++ b/static/css/init_m.css
@@ -1,52 +1,82 @@
 @charset "utf-8";
 
+/*해더*/
+.header {position: absolute; left: 0; top: 0;}
 
 /*메인비쥬얼*/
-.contents .main {}
-.contents .main .slide {box-sizing: border-box; color: #fff;}
-.contents .main .slide .mainTxt {position: absolute; top: 82px; width: 93%;}
-.contents .main .slide .mainTxt > * {text-shadow: 3px 3px 2px rgba(0,0,0, .25); letter-spacing: -0.7px;}
+.contents .main {position: relative; /*overflow: hidden;*/}
+.contents .main .slide-container {width: 100%;}
+.contents .main .slide {box-sizing: border-box; color: #fff; }
+.contents .main .slide .bg-img {width: 100%;}
+.contents .main .slide .mainTxt {position: absolute; width: 100%; left: 0; top: 50%; margin-top: -36px; z-index: 1; text-align: center;}
+.contents .main .slide .mainTxt > * {position: relative; text-shadow: 3px 3px 2px rgba(0,0,0, .25); letter-spacing: -0.7px;}
 .contents .main .slide .mainTxt .p-1 {font-size: 14px; text-indent: 2px;}
-.contents .main .slide .mainTxt h2 {font-size: 26px; margin-top: 5px; letter-spacing: -0.9px; line-height: 1.2;}
-.contents .main .slide .mainTxt .p-2 {font-size: 11px; margin-top: 7px;}
-.contents .main .slide .mainTxt .p-3 {font-size: 12px; padding-top: 9px; line-height: 1.4;}
-
-.contents .main .slide {height: 350px;}
+.contents .main .slide .mainTxt h2 {font-size: 27px; margin-top: 2px; line-height: 1.2;}
+.contents .main .slide .mainTxt h2 .f-bd {display: block; font-size: 34px;}
+.contents .main .slide .mainTxt .p-2 {display: inline-block; font-size: 11px; margin-top: 3px; background: rgba(0,0,0,0.31); padding: 5px 7px 4px; line-height: 1; letter-spacing: 0 !important;}
+.contents .main .slide .mainTxt .p-3 {font-size: 14px; padding-top: 8px; line-height: 1.4;}
 /*
-.contents .main .slide-1 {background: #eee url(http://img.sampobeach.co.kr/m/mv_1.jpg) no-repeat center 80% / cover;}
-.contents .main .slide-2 {background: #eee url(http://img.sampobeach.co.kr/m/mv_2.jpg) no-repeat center 100% / cover;}
+.contents .main .slide-1 {background: #eee url(http://img.sampobeach.co.kr/mv_1.jpg) no-repeat center;}
+.contents .main .slide-2 {background: #eee url(http://img.sampobeach.co.kr/mv_2.jpg) no-repeat center;}
 */
+
+/*
+.contents .main .slide-1:before {background: #eee url(../../img/m/mv_1.jpg) no-repeat center / cover;}
+.contents .main .slide-2:before {background: #eee url(../../img/m/mv_2.jpg) no-repeat center / cover;}
 .contents .main .slide:before {content: ""; display: block; position: absolute; width: 100%; height: 100%; left: 0; top: 0;
-	-webkit-transition: all 5.5s;
-	-ms-transition: all 5.5s;
-	-o-transition: all 5.5s;
-	transition: all 5.5s;
+	-webkit-transition: all 5.5s 0.1s;
+	-ms-transition: all 5.5s 0.1s;
+	-o-transition: all 5.5s 0.1s;
+	transition: all 5.5s 0.1s;
 }
+*/
+/*
 .contents .main .slide.active:before{
 	-webkit-transform: scale(1.05);
 	-ms-transform: scale(1.05);
 	-o-transform: scale(1.05);
 	transform: scale(1.05);
 }
-.contents .main .slide-1:before {background: #eee url(http://img.sampobeach.co.kr/m/mv_1.jpg) no-repeat center 80% / cover;}
-.contents .main .slide-2:before {background: #eee url(http://img.sampobeach.co.kr/m/mv_2.jpg) no-repeat center 100% / cover;}
+*/
 
-.contents .main .slide .mainTxt,
-.contents .main .weather {left: 7%;}
-.contents .main .weather {position: absolute; top: 250px; z-index: 99;}
-.contents .main .weather .area {position: absolute; width: 160px; height: 53px; border-left: 1px solid #fff; padding-left: 10px; box-sizing: border-box;}
-.contents .main .weather .area [class*=s-] {display: block; color: #fff; font-size: 20px; font-size: 12px;}
+.contents .main .slide .mainTxt > * {
+	top: 5px; opacity: 0; visibility: hidden;
+	-webkit-transition: all 1s 0.2s;
+	-ms-transition: all 1s 0.2s;
+	-o-transition: all 1s 0.2s;
+	transition: all 1s 0.2s;
+}
+.contents .main .slide.active .mainTxt > * {top: -5px; opacity: 1; visibility: visible;}
+
+.contents .main .slide h2 {}
+.contents .main .slide.active .p-1 {}
+.contents .main .slide.active h2 {}
+.contents .main .slide.active .p-2 {}
+.contents .main .slide.active .p-3 {}
+
+
+/*
+.contents .main .weather {position: absolute; top: 165px; left: 50%; margin-left: -600px; width: 1180px; z-index: 99;}
+.contents .main .weather .area {position: absolute; right: 5px; height: 96px; padding-left: 20px; box-sizing: border-box;}
+.contents .main .weather .area [class*=s-] {display: block; color: #fff; font-size: 20px;}
+.contents .main .weather .area .inner,
+.contents .main .weather .area img {position: relative; float: right;}
+.contents .main .weather .area .inner {}
 .contents .main .weather .area .s-1 {line-height: 1;}
 .contents .main .weather .area .s-2 {margin-top: 3px; font-weight: 700;}
-.contents .main .weather .area .s-3 {font-size: 18px;}
-.contents .main .weather .area .s-3 .big {font-size: 24px;}
+.contents .main .weather .area .s-2 .t-1 {position: relative; top: -1px;}
+.contents .main .weather .area .s-3 {font-size: 30px;}
+.contents .main .weather .area .s-3 .big {font-size: 44px;}
 .contents .main .weather .area .s-3 .c {font-family: "Noto Sans KR";}
-.contents .main .weather .area img {position: absolute; right: 0; bottom: 0; width: 62px;}
+*/
 
 /*공통스타일*/
-.contents .wrap.cmStyle {padding: 20px 0;}
-.contents .wrap.cmStyle .tit {font-size: 18px; text-align: center;}
-.contents .wrap.cmStyle .tit .sampo {text-transform: uppercase; font-size: 12px; display: block; text-indent: 2px; text-align: center;}
+.contents .wrap.cmStyle {padding: 25px 0;}
+.contents .wrap.cmStyle .tit {text-align: center;}
+.contents .wrap.cmStyle .tit .sokcho {text-transform: uppercase; font-size: 12px; display: inline-block; text-indent: 2px; margin-bottom: 2px; background: #fff; border: 1px solid #61a0c8; padding: 5px 4px 3px; line-height: 1;}
+.contents .wrap.cmStyle .tit .sokcho-2 {font-size: 12px; text-transform: uppercase;}
+.contents .wrap.cmStyle .tit .big {display: block; letter-spacing: -1px; margin-top: 5px; font-size: 18px;}
+
 /*
 .contents .wrap.cmStyle .tit .plus {position: relative; display: inline-block; width: 42px; height: 42px; box-sizing: border-box; border: 1px solid #a8a8a8; border-radius: 50%; vertical-align: middle; background: #fff; top: -4px; margin-left: 5px;}
 .contents .wrap.cmStyle .tit .plus .obj {display: block; position: relative; width: 100%; height: 100%;}
@@ -55,66 +85,52 @@
 .contents .wrap.cmStyle .tit .plus .obj:after {width: 1px; height: 15px; background: #a4a4a4; left: 50%; margin-top: -7px; top: 50%;}
 */
 
-/*이벤트*/
-.contents .event {background: url(http://img.sampobeach.co.kr/bg_event.jpg) repeat center;}
-/*
-.contents .event .tit {font-size: 34px;}
-.contents .event .tit .sampo {text-transform: uppercase; font-size: 16px; display: block; text-indent: 2px; margin-bottom: 2px;}
-.contents .event .tit .plus {position: relative; display: inline-block; width: 42px; height: 42px; box-sizing: border-box; border: 1px solid #a8a8a8; border-radius: 50%; vertical-align: middle; background: #fff; top: -4px; margin-left: 5px;}
-.contents .event .tit .plus .obj {display: block; position: relative; width: 100%; height: 100%;}
-.contents .event .tit .plus .obj:before, .contents .event .tit .plus .obj:after {content: ""; display: block; position: absolute;}
-.contents .event .tit .plus .obj:before {width: 15px; height: 1px; background: #a4a4a4; left: 50%; margin-left: -7px; top: 50%;}
-.contents .event .tit .plus .obj:after {width: 1px; height: 15px; background: #a4a4a4; left: 50%; margin-top: -7px; top: 50%;}
-*/
-.contents .event .area {margin-top: 12px;}
-.contents .event .area + .area {margin-top:20px;}
-.contents .event .area .evt-img {position: relative;}
-.contents .event .area .evt-img img {display: block; width: 100%; box-sizing: border-box; border: 1px solid #b0ada8;}
-.contents .event .area .evt-img iframe {width: 100%; height: 174px; margin-top: 10px;}
-.contents .event .area .evt-info {}
-.contents .event .area .h3-tit {position: relative; font-size: 14px; color: #5a5a5a; font-weight: 700; padding-bottom: 8px;  word-break: keep-all; text-align: center; margin-top: 10px;}
-.contents .event .area .h3-tit:after {content: ""; display: block; position: absolute; width: 30%; bottom: 0; left: 35%; border-bottom: 1px solid #a8a8a8;}
-.contents .event .area .evt-info .detail {padding-top: 3px;}
-.contents .event .area .evt-info dl {margin-top: 5px; font-size: 13px; line-height: 1.5; text-align: center;}
-.contents .event .area .evt-info dl:after {content: ""; display: table; clear: both;}
-.contents .event .area .evt-info dt, .contents .event .area .evt-info dd {display: inline-block;}
-.contents .event .area .evt-info dt {color: #008ead; font-weight: 700;}
-.contents .event .area .evt-info dd {margin-left: 5px; color: #000;}
-.contents .event .area .evt-info dd {letter-spacing: -0.5px;}
-.contents .event .showing {font-size: 18px; color: #4c4c4c; margin-top: 25px; line-height: 1.5;}
-.contents .event .area .h3-tit,
-.contents .event .area .evt-info dd,
-.contents .event .showing {letter-spacing: -0.9px;}
+/*속초8경*/
+.contents .view {background: url(../../img/m/bg_view.jpg) no-repeat center / cover;}
+.contents .view .area {}
+.contents .view .area .list {margin-top: 15px;}
+.contents .view .area .list + .list {margin-top: 0px;}
+.contents .view .area .list > li {float: left; width: 48.6%; margin-left: 2.4%; overflow: hidden;}
+.contents .view .area .list > li:nth-child(2n-1) {margin-left: 0;}
+/*.contents .view .area .list > .link-tour {cursor:pointer}*/
+.contents .view .area .list > li .tour-img {box-sizing: border-box;}
+.contents .view .area .list > li dl {margin-top: 8px; letter-spacing: -0.9px;}
+.contents .view .area .list > li dl dt {color: 0; padding-bottom: 5px; margin-bottom: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+.contents .view .area .list > li dl dt h4 {font-size: 14px; font-weight: 700; color: #000; text-align: center; padding-top: 1px;}
+.contents .view .area .list > li dl dt h4 .num {position: relative; top: -1px;background: #1d5e87; color: #fff; display: inline-block; width: 18px; height: 18px; border-radius: 50%; line-height: 1.6; vertical-align: middle; font-weight: 400; font-size: 13px;}
+.contents .view .area .list > li dl dd {font-size: 11.5px; color: #4c4c4c; line-height: 1.4; padding: 0 0px; height: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; letter-spacing: -1px; word-break: keep-all;}
+.contents .view .row-btn {text-align: center;}
+.contents .view .row-btn .btn-more {display: inline-block; padding: 4px 9px; border-radius: 15px; font-size: 12.5px; background: #fff; border: 1px solid #4286b0; color: #165e88; }
 
 /*관광지*/
-.contents .tourist {background: #fff;}
+.contents .tourist {}
 .contents .tourist .area {}
-.contents .tourist .area .h3-tit {position: relative; font-size: 16px; margin: 15px 0 5px;}
-.contents .tourist .area-1 .h3-tit {margin-top: 10px;}
-.contents .tourist .area .h3-tit > * {vertical-align: middle;}
-.contents .tourist .area .h3-tit .sampo {text-transform: uppercase; font-size: 16px; display: inline-block; text-indent: 2px; margin-bottom: 4px;}
-.contents .tourist .area .h3-tit:before {content: ""; display: inline-block; width: 6px; height: 16px; background: #c0c0c0; vertical-align: middle; margin-right: 5px;}
-.contents .tourist .area .list + .list {margin-top: 10px;}
-.contents .tourist .area .list > li {float: left; width: 49%; margin-left: 2%; overflow: hidden;}
-.contents .tourist .area .list > li:nth-child(2n+1) {margin-left: 0;}
-.contents .tourist .area .list > .link-tour {cursor:pointer}
-.contents .tourist .area .list > li .tour-img {border: 1px solid #a19e9f;  box-sizing: border-box;}
-.contents .tourist .area .list > li .tour-img img {width: 100%;}
-.contents .tourist .area .list > li dl {margin-top: 5px; letter-spacing: -0.9px; word-break: keep-all;}
-.contents .tourist .area .list > li dl dt {font-size: 11.5px; color: 0; padding-bottom: 5px; margin-bottom: 5px; border-bottom: 1px solid #c8c8c8; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
-.contents .tourist .area .list > li dl dt h4 {font-size: 14px; color: #008ead; font-weight: 700; margin-bottom: 2px;}
-.contents .tourist .area .list > li dl dd {font-size: 13px; color: #4c4c4c; line-height: 1.5;}
+.contents .tourist .area .h3-tit {position: relative; font-size: 15px; margin-top: 15px;}
+.contents .tourist .area .h3-tit:before {content: ""; display: inline-block; width: 5px; height: 14px; background: #c0c0c0; vertical-align: middle; margin-right: 4px;}
+.contents .tourist .area .list + .list {margin-top: 5px;}
+.contents .tourist .area .list > li {float: left; width: 48.6%; margin-left: 2.4%; margin-top: 15px; overflow: hidden;}
+.contents .tourist .area .list > li:first-child, .contents .tourist .area .list > li:nth-child(2) {margin-top: 5px;}
+.contents .tourist .area .list > li:nth-child(2n-1) {margin-left: 0;}
+/*.contents .tourist .area .list > .link-tour {cursor:pointer}*/
+/*.contents .tourist .area .list > li .tour-img {border: 1px solid #a19e9f; width: 280px; height: 160px; box-sizing: border-box;}*/
+.contents .tourist .area .list > li dl {margin-top: 7px; letter-spacing: -0.9px;}
+.contents .tourist .area .list > li dl dt {font-size: 12px; color: 0; padding-bottom: 5px; margin-bottom: 7px; border-bottom: 1px solid #c8c8c8; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+.contents .tourist .area .list > li dl dt h4 {font-size: 14px; color: #008ead; font-weight: 700;}
+.contents .tourist .area .list > li dl dd {font-size: 12px; color: #4c4c4c; line-height: 1.4; word-break: keep-all;}
 
 /*오시는길*/
 .contents .waycome {background: #f5f5f5; padding: 55px 0 70px;}
-.contents .waycome [class*=way-] {position: relative;}
-.contents .waycome .area {margin-top: 12px;}
-.contents .waycome .way-info {width: 310px; margin: 0 auto;}
-.contents .waycome .way-info .p-1 {position: relative; margin-top: 15px; font-size: 14px; font-weight: 700;}
-.contents .waycome .way-info dl {font-size: 12px; line-height: 1.6; word-break: keep-all;}
-.contents .waycome .way-info dt {font-weight: 700; margin-top: 3px;}
-.contents .waycome .way-info dd {}
-.contents .waycome .way-info dd p.dot {position: relative; padding-left: 8px;}
-.contents .waycome .way-info dd p.dot:before {content: "-"; display: inline-block; position: absolute; left: 0;}
-.contents .waycome .way-map {position: relative; margin: 0 auto;}
-.contents .waycome .way-map > div {margin: 0 auto;}
+.contents .waycome [class*=way-] {position: relative; box-sizing: border-box;}
+.contents .waycome .tit {text-align: left; line-height: 1;}
+.contents .waycome .tit .big {}
+.contents .waycome .way-info {}
+.contents .waycome .way-info .p-1 {margin-top: 15px; font-size: 14px; font-weight: 700;}
+.contents .waycome .way-info dl + .p-1 {margin-top: 10px;}
+.contents .waycome .way-info dl {font-size: 12px; line-height: 1.65;}
+.contents .waycome .way-info dt {font-weight: 700; margin-top: 2px;}
+.contents .waycome .way-info dd {position: relative; padding-left: 5px; letter-spacing: -0.5px;}
+.contents .waycome .way-info dd.dot {padding-left: 12px;}
+.contents .waycome .way-info dd .dot {position: absolute; left: 5px;}
+.contents .waycome .way-info {}
+.contents .waycome .way-map {border: 1px solid #a9a7a8; margin-top: 12px;}
+.contents .waycome .way-map img {width: 100%;}
