--- a/views/board/index.html
+++ b/views/board/index.html
@@ -130,6 +130,20 @@
 							<a href="">3</a>
 							<a class="next" href="">&gt;</a>
 						</div>
+						<div class="row-btn cf">
+							<button type="button" class="appe-reset btn-write">글쓰기</button>
+						</div>
+					</div>
+					<div class="row-search">
+						<div class="sltDiv">
+							<span class="sltArr"></span>
+							<select name="" id="" class="category appe-reset">
+								<option value="">제목</option>
+								<option value="">키워드</option>
+							</select>
+						</div>
+						<input type="text" value="" class="appe-reset keword">
+						<input type="button" value="검색" class="appe-reset btn-search">
 					</div>
 				</div>
 			</section>
