--- a/static/css/init.css
+++ b/static/css/init.css
@@ -102,8 +102,8 @@
 .contents .tourist {margin-top: -350px;}
 .contents .tourist .area {}
 .contents .tourist .area .h3-tit {position: relative;font-size: 26px; margin: 30px 0 15px;}
-.contents .tourist .area .h3-tit > * {vertical-align: middle;}
-.contents .tourist .area .h3-tit .sokcho {text-transform: uppercase; font-size: 16px; display: inline-block; text-indent: 2px; margin-bottom: 5px;}
+.contents .tourist .area .h3-tit > * {vertical-align: top;}
+.contents .tourist .area .h3-tit .sokcho {text-transform: uppercase; font-size: 16px; display: inline-block; text-indent: 2px; margin-top: 5px;}
 .contents .tourist .area .h3-tit:before {content: ""; display: inline-block; width: 10px; height: 25px; background: #c0c0c0; vertical-align: middle; margin-right: 10px;}
 .contents .tourist .area .list > li {float: left; width: 280px; margin-left: 20px; overflow: hidden;}
 .contents .tourist .area .list > li:first-child {margin-left: 0;}
