--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
 		<header class="header">
 			<div class="wrap">
 				<div class="area container">
-					<h1 class="logo"><a href=""><img src="../img/common/logo.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 삼포비치</span></a></h1>
+					<h1 class="logo"><a href="index.html"><img src="../img/common/logo.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 삼포비치</span></a></h1>
 					<nav class="gnb">
 						<ul class="menu cf">
 							<li class="item-1"><a href="about/">속초해변 소개</a></li>
