--- a/views_m/view/index.html
+++ b/views_m/view/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<!--[if IE 8]><html lang="ko-KR" class="no-js ie8 lt-ie10"><![endif]-->
-<!--[if IE 9]><html lang="ko-KR" class="no-js ie9 lt-ie10"><![endif]-->
-<!--[if !IE]><!-->
 <html lang="ko">
-<!--<![endif]-->
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>속초해수욕장</title>
 	
 	<!--공통 폰트 및 css-->
@@ -19,18 +16,15 @@
 	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/common.css">
 	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/view/init.css">
 -->
-	<link rel="stylesheet" href="../../static/css/common.css">
-	<link rel="stylesheet" href="../../static/css/view/init.css">
+	<link rel="stylesheet" href="../../static/css/common_m.css">
+	<link rel="stylesheet" href="../../static/css/view/init_m.css">
 	
 	<!--js-->
 	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 <!--	<script src="http://static.sokchobeach.co.kr/js/view/init.js"></script>-->
-	<script src="../../static/js/view/init.js"></script>
-	
-	<!--[if lt IE 9]>
-		<script type="text/javascript" src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	<![endif]-->
+	<script src="../../static/js/common_m.js"></script>
+	<script src="../../static/js/view/init_m.js"></script>
 	
 </head>
 <body>
@@ -40,15 +34,32 @@
 		<header class="header">
 			<div class="wrap">
 				<div class="area container">
-					<h1 class="logo"><a href=""><img src="../../img/common/logo_2.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 속초비치</span></a></h1>
+					<h1 class="logo"><a href=""><img src="../../img/common/logo.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 로고</span></a></h1>
+					<button class="appe-reset nav-tab">
+						<span class="bar"></span>
+						<span class="bar"></span>
+						<span class="bar"></span>
+					</button>
+					<div class="weather">
+						<spana class="s1">흐림</spana><spana class="mg"></spana><spana class="c">35℃</spana>
+					</div>
 					<nav class="gnb">
+						<div class="bg-drop"></div>
 						<ul class="menu cf">
-							<li class="item-1"><a href="">속초해변 소개</a></li>
-							<li class="item-2"><a href="">관광정보</a></li>
-							<li class="item-3"><a href="">속초8경</a></li>
-							<li class="item-4"><a href="">오시는 길</a></li>
-							<li class="item-5"><a href="">추억게시판</a></li>
-							<li class="item-6"><a href="">공지사항</a></li>
+							<li class="item-0">
+								<img src="../../img/common/logo.png" alt="속초해수욕장 로고"><span class="a-i-x i-x" onclick=""></span>
+								<p class="p-1">
+									가슴벅찬 일출, 시원한 파도<br>
+									대한민국의 자랑, 속초해변으로 오세요
+								</p>
+							</li>
+							<li class="item-1"><a href="../index.html">홈으로 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-1"><a href="../about/">속초해변 소개 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-2"><a href="../tourist/">관광정보 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-2"><a href="../view/">속초8경 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-3"><a href="../waycome/">오시는 길 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-4"><a href="../board/memory_list.html">추억게시판 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-5"><a href="../board/">공지사항 <span class="ic-rArrow rArrow"></span></a></li>
 						</ul>
 					</nav>
 				</div>
@@ -75,7 +86,7 @@
 						다양하고 아름다운 진풍경에 감탄이 절로 나옵니다.
 					</p>
 					<div class="view-map">
-						<img src="../../img/view/map.jpg" alt="속초8경 지도">
+						<img src="../../img/m/view/map.jpg" alt="속초8경 지도">
 					</div>
 					<p class="p-1">
 						속초 8경 이외에도 먹거리, 볼거리 가득한 관광명소 속초에서 즐거운 시간을 모두 드립니다.<br>
@@ -200,7 +211,8 @@
 			<div class="wrap container">
 				<figure class="logo"><img src="../../img/common/logo.png" alt="속초해수욕장로고"></figure>
 				<address>
-					아름다운 속초해변 !  영롱한 바다는 물론이며 주변의 관광지인 설악산, 척산온천, 청초호, 영랑호와 더불어 <br>
+					아름다운 속초해변 !  영롱한 바다는 물론이며 주변의 관광지인 <br>
+					설악산, 척산온천, 청초호, 영랑호와 더불어 <br>
 					속초시에 유일한 해수욕장으로 전국적인 사랑을 한 몸에 받고 있습니다.<br>
 					<p class="p-2">
 						본 사이트는 속초해수욕장을 사랑하는 주민자치회가 자체 운영합니다.<br>
@@ -210,6 +222,11 @@
 				</address>
 			</div>
 		</footer>
+		
+		<a href="javascript:;" class="btn-top">
+			<span class="arr">▲</span>
+			TOP
+		</a>
 		
 	</div>	
 		
