--- a/static/css/view/init_m.css
+++ b/static/css/view/init_m.css
@@ -1,29 +1,31 @@
 @charset "utf-8";
 
-/*공통스타일*/
-.contents .wrap.cmStyle {padding: 40px 0 80px;}
-.contents .wrap.cmStyle .tit {text-align: center;}
-.contents .wrap.cmStyle .tit .sokcho {text-transform: uppercase; font-size: 18px; display: inline-block; text-indent: 2px; margin-bottom: 2px; background: #fff; border: 2px solid #61a0c8; padding: 8px 9px 6px; line-height: 1;}
-.contents .wrap.cmStyle .tit .sokcho-2 {font-size: 18px;}
-.contents .wrap.cmStyle .tit .big {display: block; letter-spacing: -1px; margin-top: 5px; font-size: 40px;} 
 
 /*서브비쥬얼*/
-.contents .subVisual {background: #eee url(../../../img/view/subVisual.jpg) no-repeat center;}
+.contents .subVisual {background: #eee url(../../../img/m/view/subVisual.jpg) no-repeat center / cover;}
+
+/*공통스타일*/
+.contents .wrap.cmStyle {padding: 17px 0 20px;}
+.contents .wrap.cmStyle .tit {text-align: center;}
+.contents .wrap.cmStyle .tit .sokcho {text-transform: uppercase; font-size: 12px; display: inline-block; text-indent: 2px; margin-bottom: 2px; background: #fff; border: 1px solid #61a0c8; padding: 5px 4px 3px; line-height: 1;}
+.contents .wrap.cmStyle .tit .sokcho-2 {font-size: 12px; text-transform: uppercase;}
+.contents .wrap.cmStyle .tit .big {display: block; letter-spacing: -1px; margin-top: 5px; font-size: 18px;}
 
 /*속초8경*/
-.contents .view {background: url(../../img/bg_view.jpg) no-repeat center / cover;}
-.contents .view .p-1 {text-align: center; font-size: 20px; margin-top: 10px; line-height: 1.5;}
-.contents .view .view-map {width: 1180px; margin: 30px auto; box-sizing: border-box; border: 1px solid #a29fa0; border-radius: 15px; overflow: hidden;}
-.contents .view .view-map img {}
-.contents .view .area {margin-top: 40px;} 
-.contents .view .area .list {margin-top: 28px;}
-.contents .view .area .list + .list {margin-top: 35px;}
-.contents .view .area .list > li {float: left; width: 287.5px; margin-left: 10px; overflow: hidden;}
-.contents .view .area .list > li:first-child {margin-left: 0;}
+.contents .view {}
+.contents .view .p-1 {font-size: 13px; text-align: center; margin: 10px 0 12px; word-break: keep-all;} 
+.contents .view .view-map {border: 1px solid #d7d7d7; box-sizing: border-box; border-radius: 10px; overflow: hidden;}
+.contents .view .area {}
+.contents .view .area .list {margin-top: 15px;}
+.contents .view .area .list + .list {margin-top: 0px;}
+.contents .view .area .list > li {float: left; width: 48.6%; margin-left: 2.4%; overflow: hidden;}
+.contents .view .area .list > li:nth-child(2n-1) {margin-left: 0;}
 /*.contents .view .area .list > .link-tour {cursor:pointer}*/
 .contents .view .area .list > li .tour-img {box-sizing: border-box;}
-.contents .view .area .list > li dl {margin-top: 15px; letter-spacing: -0.9px;}
-.contents .view .area .list > li dl dt {font-size: 15px; color: 0; padding-bottom: 10px; margin-bottom: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
-.contents .view .area .list > li dl dt h4 {font-size: 22px; font-weight: 700; color: #000; text-align: center; padding-top: 1px;}
-.contents .view .area .list > li dl dt h4 .num {position: relative; top: -1px;background: #1d5e87; color: #fff; display: inline-block; width: 32px; height: 32px; border-radius: 50%; line-height: 1.5; vertical-align: middle; font-weight: 400;}
-.contents .view .area .list > li dl dd {font-size: 17px; color: #4c4c4c; line-height: 1.4; padding: 0 7px; height: 70px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; letter-spacing: -1px;}
+.contents .view .area .list > li dl {margin-top: 8px; letter-spacing: -0.9px;}
+.contents .view .area .list > li dl dt {color: 0; padding-bottom: 5px; margin-bottom: 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+.contents .view .area .list > li dl dt h4 {font-size: 14px; font-weight: 700; color: #000; text-align: center; padding-top: 1px;}
+.contents .view .area .list > li dl dt h4 .num {position: relative; top: -1px;background: #1d5e87; color: #fff; display: inline-block; width: 18px; height: 18px; border-radius: 50%; line-height: 1.6; vertical-align: middle; font-weight: 400; font-size: 13px;}
+.contents .view .area .list > li dl dd {font-size: 11.5px; color: #4c4c4c; line-height: 1.4; padding: 0 0px; height: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; letter-spacing: -1px; word-break: keep-all;}
+.contents .view .row-btn {text-align: center;}
+.contents .view .row-btn .btn-more {display: inline-block; padding: 4px 9px; border-radius: 15px; font-size: 12.5px; background: #fff; border: 1px solid #4286b0; color: #165e88; }
