--- a/static/css/waycome/init_m.css
+++ b/static/css/waycome/init_m.css
@@ -1,28 +1,28 @@
 @charset "utf-8";
 
-/*공통스타일*/
-.contents .wrap.cmStyle {}
-
 /*컬러*/
 .c-blue {color: #008aff;}
 
+/*공통스타일*/
+.contents .wrap.cmStyle {padding-bottom: 10px;}
+
 /*서브비쥬얼*/
-.contents .subVisual {background: #eee url(../../../img/waycome/subVisual.jpg) no-repeat center;}
+.contents .subVisual {background: #eee url(../../../img/m/waycome/subVisual.jpg) no-repeat center 60% / cover;}
 
 /*오시는길*/
-.contents .waycome {background: #f5f5f5; padding: 55px 0 70px;}
+.contents .waycome {background: #f5f5f5; padding: 25px 0 30px;}
 .contents .waycome [class*=way-] {position: relative;}
-.contents .waycome .way-info {}
-.contents .waycome .way-info .p-1 {position: relative; margin-top: 30px; font-size: 26px; font-weight: 700; margin-bottom: 3px;}
-.contents .waycome .way-info .p-1:before {content: ""; display: inline-block; width: 10px; height: 25px; background: #c0c0c0; vertical-align: middle; margin-right: 10px; margin-top: -1px;}
-.contents .waycome .way-info .p-1:first-child {margin-top: 0;}
-.contents .waycome .way-info dl {font-size: 20px; line-height: 1.65; letter-spacing: -0.9px;}
-.contents .waycome .way-info dt, .contents .waycome .way-info dd {padding-left: 20px;}
-.contents .waycome .way-info dt {font-weight: 700; margin-top: 18px;}
+.contents .waycome .area {margin-top: 0px;}
+.contents .waycome .way-info {margin: 0 auto;}
+.contents .waycome .way-info .p-1 {position: relative; margin-top: 15px; font-size: 14px; font-weight: 700;}
+.contents .waycome .way-info .p-1:before {content: ""; display: inline-block; width: 6px; height: 13px; background: #c0c0c0; vertical-align: middle; margin-right: 5px; margin-top: -1px;}
+.contents .waycome .way-info dl {font-size: 12px; line-height: 1.6; word-break: keep-all;}
+.contents .waycome .way-info dt {font-weight: 700; margin-top: 3px; padding-left: 10px;}
 .contents .waycome .way-info dd {}
-.contents .waycome .way-info dd p.dot {position: relative;padding-left: 12px;}
-.contents .waycome .way-info dd p.dot:before {content: "-"; display: inline-block; position: absolute; left: 0;}
-.contents .waycome .way-info .row-btn {margin-top: 35px; padding-left: 10px;}
-.contents .waycome .way-info .row-btn a:first-child {margin-right: 10px;}
-.contents .waycome .way-info {float: right;}
-.contents .waycome .way-map {float: left;}
+.contents .waycome .way-info dd p.dot {position: relative; padding-left: 19px;}
+.contents .waycome .way-info dd p.dot:before {content: "-"; display: inline-block; position: absolute; left: 11px;}
+.contents .waycome .way-map {position: relative; margin: 0 auto;}
+.contents .waycome .way-map > div {margin: 0 auto;}
+.contents .waycome .way-info .row-btn {margin-top: 15px; text-align: center;}
+.contents .waycome .way-info .row-btn a {display: inline-block; width: 120px;}
+.contents .waycome .way-info .row-btn a:first-child {margin-right: 5px;}
