--- a/views/board/memory_read.html
+++ b/views/board/memory_read.html
@@ -40,15 +40,15 @@
 		<header class="header">
 			<div class="wrap">
 				<div class="area container">
-					<h1 class="logo"><a href=""><img src="../../img/common/logo_2.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 속초비치</span></a></h1>
+					<h1 class="logo"><a href="../index.html"><img src="../../img/common/logo_2.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 속초비치</span></a></h1>
 					<nav class="gnb">
 						<ul class="menu cf">
-							<li class="item-1"><a href="">속초해변 소개</a></li>
-							<li class="item-2"><a href="">관광정보</a></li>
-							<li class="item-3"><a href="">속초8경</a></li>
-							<li class="item-4"><a href="">오시는 길</a></li>
-							<li class="item-5"><a href="">추억게시판</a></li>
-							<li class="item-6"><a href="">공지사항</a></li>
+							<li class="item-1"><a href="../about/">속초해변 소개</a></li>
+							<li class="item-2"><a href="../tourist/">관광정보</a></li>
+							<li class="item-3"><a href="../view/">속초8경</a></li>
+							<li class="item-4"><a href="../waycome/">오시는 길</a></li>
+							<li class="item-5"><a href="../board/memory_list.html">추억게시판</a></li>
+							<li class="item-6"><a href="../board/">공지사항</a></li>
 						</ul>
 					</nav>
 				</div>
