--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
 		<header class="header">
 			<div class="wrap">
 				<div class="area container">
-					<h1 class="logo"><a href="index.html"><img src="../img/common/logo.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 삼포비치</span></a></h1>
+					<h1 class="logo"><a href="index.html"><img src="../img/common/logo.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 </span></a></h1>
 					<nav class="gnb">
 						<ul class="menu cf">
 							<li class="item-1"><a href="about/">속초해변 소개</a></li>
@@ -72,12 +72,12 @@
 					</div>
 					<div class="slide slide-2">
 						<div class="mainTxt container">
-							<p class="p-1">열려있는 은빛 백사장과 향긋한 바다향기</p>
-							<h2><span class="f-bd">속초해변</span>의 푸름을 만나다 !</h2>
+							<p class="p-1">1년 365일, 속초방문 1,800만</p>
+							<h2>우리의 해변, <span class="f-bd">속초해수욕장</span></h2>
 							<p class="p-2"><span class="f-bdr">SOKCHO</span> BEACH</p>
 							<p class="p-3">
-								푸르게 빛나는 삼포 바다의 수평선<br>
-								사계절, 바다내음이 가득 물든 풍광들이 넘처납니다.
+								관광객 2,000만 시대를 준비하는 속초해수욕장 !<br>
+								아름다운 진경의 바다로 당신을 초대합니다.
 							</p>
 						</div>
 					</div>
