--- a/static/css/common.css
+++ b/static/css/common.css
@@ -46,7 +46,7 @@ label {cursor: pointer;}
 
 /*해더영역*/
 .header,
-.header .wrap {width: 100%; height: 74px;}
+.header .wrap {width: 100%; height: 74px; z-index: 60;}
 .header {position: relative; background: #000;}
 .header .wrap {position: fixed; top: 0; left: 0; width: 100%; background: rgba(0,0,0,0.4); z-index: 1;}
 .header .wrap .area {height: 100%; padding-top: 27px; box-sizing: border-box;}
