--- a/static/css/init_m.css
+++ b/static/css/init_m.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 /*해더*/
-.header {position: absolute; left: 0; top: 0;}
+.header {position: absolute; left: 0; top: 0; background: none;}
 
 /*메인비쥬얼*/
 .contents .main {position: relative; /*overflow: hidden;*/}
